# resurrect

./: .gitignore  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  build-app.sh  pyproject.toml
Sources/ResCore/: Geometry.swift  GhosttyAccessibility.swift  Launcher.swift  Liveness.swift  Permissions.swift  Preferences.swift  Session.swift  ShellQuote.swift  Snapshot.swift
Sources/ResCore/Agents/: AgentRegistry.swift  ClaudeCodeAgent.swift  CodingAgent.swift
Sources/ResCore/Terminals/: GhosttyTerminal.swift  KittyTerminal.swift  Terminal.swift  TerminalProcess.swift  TerminalRegistry.swift  WezTermTerminal.swift
Sources/res/: CLI.swift  Picker.swift  main.swift
Sources/res/MenuBar/: MenuBarApp.swift  SessionStore.swift
Sources/res/Onboarding/: OnboardingController.swift  OnboardingModel.swift  OnboardingView.swift
Tests/ResCoreTests/: CapabilityTests.swift  ResCoreTests.swift
icon/: Resurrect.icns
menubar/: Package.swift  build-app.sh
menubar/Sources/ResBar/: ResBarApp.swift  ResCLI.swift  Session.swift  SessionStore.swift
picker/: composer.json  pick.php
res/: __init__.py  cli.py  core.py
res/agents/: __init__.py  base.py  claude_code.py
scripts/: make-icon.swift
tests/: test_res.py
